update Hyperparamter tuning - dễ hiểu Created using Colab

--- a/SubmitCodeAllZip/model/MultiLinearReg.ipynb
+++ b/SubmitCodeAllZip/model/MultiLinearReg.ipynb
@@ -1127,7 +1127,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **1. Các tham số (Hyperparameters)**\n",
+        "### **1. Các tham số (Hyperparameters) của 1 model**\n",
         "\n",
         "- **Tham số** là các nút điều chỉnh của mô hình để giúp nó hoạt động tốt hơn.\n",
         "- **Ví dụ**:\n",
@@ -1141,7 +1141,7 @@
         "\n",
         "---\n",
         "\n",
-        "### **2. Hyperparameter Tuning là gì?**\n",
+        "### **2. Hyperparameter Tuning (tối ưu tham số) là gì và tại sao cần Hyperparameter Tuning?**\n",
         "\n",
         "- **Đơn giản**: Là cách chọn \"nút điều chỉnh\" (tham số) tốt nhất để mô hình hoạt động hiệu quả nhất.\n",
         "- **Ví dụ dễ hiểu**:\n",
@@ -1149,7 +1149,7 @@
         "\n",
         "---\n",
         "\n",
-        "### **3. Grid Search và Randomized Search**\n",
+        "### **3. Grid Search (tìm kiếm theo lưới) và Randomized Search (tìm kiếm ngẫu nhiên) trong việc lựa chọn tham số tốt nhất**\n",
         "\n",
         "- **Grid Search**:\n",
         "  - Thử **tất cả các kết hợp** tham số chúng ta đưa ra.\n",
